--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -384,6 +384,15 @@ https://www.nature.com/articles/nn2007.pdf},
   year      = {2008},
 }
 
+@Manual{Morey2021,
+  title  = {{BayesFactor}: {Computation} of {Bayes} factors for common designs},
+  author = {Richard D. Morey and Jeffrey N. Rouder},
+  note   = {R package version 0.9.12-4.3},
+  year   = {2021},
+  groups = {CERED},
+  url    = {https://CRAN.R-project.org/package=BayesFactor},
+}
+
 @article{Paschke2016,
    author = {Paschke, L. M. and Dorfel, D. and Steimke, R. and Trempler, I. and Magrabi, A. and Ludwig, V. U. and Schubert, T. and Stelzel, C. and Walter, H.},
    title = {Individual differences in self-reported self-control predict successful emotion regulation},
